<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name" translatable="false">Fill My Team</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="share" translatable="false">Share</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="detail_icon_transition_name" translatable="false">TN_DetailIcon</string>
    <string name="title_activity_detail" translatable="false">DetailActivity</string>
    <string name="error_player" translatable="false">There was an error initializing the YouTubePlayer (%1$s)</string>
    <string name="place_details" translatable="false">&lt;b&gt;%1$s&lt;/b&gt;&lt;br/&gt;&lt;i&gt;Place Id: %2$s&lt;/i&gt;&lt;br/&gt;Address: %3$s&lt;br/&gt;Phone: %4$s&lt;br/&gt;Website: %5$s</string>
    <string name="map_key" translatable="false"></string>
    <string name="geo_api_key" translatable="false">geo_api_key</string>
    <string name="sport_goods_query" translatable="false">sports+goods+in+</string>
    <string name="loading" translatable="false">Loading…</string>
    <string name="firebase_status_fmt" translatable="false">Firebase User: %s</string>
    <string name="google_status_fmt" translatable="false">Google User: %s</string>
    <string name="log_error_the_read_failed" translatable="false">The read failed: </string>
    <string name="map_not_ready" translatable="false">Map is not ready yet</string>
    <string name="clear_map" translatable="false">Clear</string>
    <string name="reset_map" translatable="false">Reset</string>
    <string name="player_time_location" translatable="false"><xliff:g id="sport">%1$s</xliff:g> in <xliff:g id="location">%2$s</xliff:g> at <xliff:g id="time">%3$s</xliff:g></string>
    <string name="playing_message" translatable="false">You are scheduled to play  <xliff:g id="place">%1$s</xliff:g> </string>
    <string name="google_services_unavailable" translatable="false">Google Play Services is not available.</string>
    <string name="profile_updated" translatable="false">Profile has been updated successfully!</string>
    <string name="user_found_latlng" translatable="false">Key <xliff:g id="key">%1$s</xliff:g> entered the search area at <xliff:g id="lat">%2$f</xliff:g>,<xliff:g id="lng">%3$f</xliff:g></string>
    <string name="no_player_found" translatable="false">No <xliff:g id="sportName">%1$s</xliff:g>  players found nearby!</string>
    <string name="no_key_found" translatable="false">Key <xliff:g id="key">%1$s</xliff:g> is no longer in the search area</string>
    <string name="geo_query_error" translatable="false">There was an error with this query: </string>
    <string name="user_moved" translatable="false">Key <xliff:g id="key">%1$s</xliff:g> moved within the search area to <xliff:g id="lat">%2$f</xliff:g>,<xliff:g id="lng">%3$f</xliff:g></string>
    <string name="invite_user" translatable="false">Invite  <xliff:g id="username">%1$s</xliff:g> to play</string>
    <string name="no_geocoder" translatable="false">no geocoder available</string>
    <string name="no_item_state" translatable="false">Unable to Set Item State</string>
    <string name="place_autocomplete_error" translatable="false">Error contacting API: <xliff:g id="error">%1$s</xliff:g></string>
    <string name="place_autocomplete_log_error" translatable="false"> Error getting autocomplete prediction API call:<xliff:g id="error">%1$s</xliff:g></string>
    <string name="place_autocomplete_no_result" translatable="false">Query completed. Received <xliff:g id="error">%1$d</xliff:g> predictions.</string>
    <string name="google_api_client_connect_error" translatable="false">Could not connect to Google API Client: Error  <xliff:g id="error">%1$s</xliff:g> </string>
    <string name="geo_location" translatable="false">google.navigation:q=<xliff:g id="storeLocation">%1$s</xliff:g></string>
    <string name="fill_my_team" translatable="false">Fill My Team</string>
    <string name="sign_in" translatable="false">Sign in with Google</string>
    <string name="sign_out" translatable="false">Sign out</string>
    <string name="where" translatable="false">Where</string>
    <string name="sport" translatable="false">Sport</string>
    <string name="update" translatable="false">Update</string>
    <string name="locate_players" translatable="false">Locate players</string>
    <string name="players" translatable="false">Players</string>
    <string name="basic_rules" translatable="false">Basic Rules</string>
    <string name="video" translatable="false">Video</string>
    <string name="data_unavailable" translatable="false">Sports Data unavailable</string>
    <string name="autocomplete_hint" translatable="false">Search for Sports Stores</string>
    <string name="daily_notification" translatable="false">Notify 30 minutes before my playing time</string>
    <string name="google_calendar_notification" translatable="false">Book my calendar</string>
    <string name="settings" translatable="false">Settings</string>
    <string name="manage_notifications" translatable="false">Manage Notifications</string>
    <string name="notify_frequency_key" translatable="false">notify_frequency</string>
    <string name="calendar_event" translatable="false">Schedule events</string>
    <string name="frequency" translatable="false">Notification interval before playing time</string>
    <string name="football" translatable="false">Football</string>
    <string name="cricket" translatable="false">Cricket</string>
    <string name="basketball" translatable="false">Basketball</string>
    <string name="hockey" translatable="false">Hockey</string>
    <string name="tennis" translatable="false">Tennis</string>
    <string name="badminton" translatable="false">Badminton</string>
    <string name="baseball" translatable="false">Baseball</string>
    <string name="rugby" translatable="false">Rugby</string>
    <string name="volleyball" translatable="false">Volleyball</string>
    <string name="table_tennis" translatable="false">Table Tennis</string>
    <string name="all" translatable="false">All</string>
    <string name="fifteen_mins" translatable="false">15 min</string>
    <string name="thirty_mins" translatable="false">30 min</string>
    <string name="one_hour" translatable="false">1 hr</string>
    <string name="two_hour" translatable="false">2 hr</string>
    <string name="fifteen_mins_value" translatable="false">15</string>
    <string name="thirty_mins_value" translatable="false">30</string>
    <string name="one_hour_value" translatable="false">60</string>
    <string name="two_hour_value" translatable="false">120</string>
    <string name="cal_event_key" translatable="false">event_key</string>
    <string name="cal_event_title" translatable="false">Book calendar for my playing time</string>
    <string name="choice_notify_off" translatable="false">Disabled</string>
    <string name="choice_notify_on" translatable="false">Enabled</string>
    <string name="cal_event_desc" translatable="false">Enable/Disable Calendar Events</string>
    <string name="default_notify_choice" translatable="false">true</string>
    <string name="ok" translatable="false">OK</string>
    <string name="invite_play" translatable="false">Invite <xliff:g id="username">%1$s</xliff:g>  to play?</string>
    <string name="invite" translatable="false">Invite</string>
    <string name="cancel" translatable="false">Cancel</string>
    <string name="invited_to_play" translatable="false">Invited <xliff:g id="username">%1$s</xliff:g>  to play</string>
    <string name="upcoming_matches" translatable="false">Upcoming Matches</string>
    <string name="title_widget_detail" translatable="false">Upcoming Match Details</string>
    <string name="appwidget_text" translatable="false">EXAMPLE</string>
    <string name="add_widget" translatable="false">Add widget</string>
    <string name="content_authority" translatable="false">com.sample.android.fillmyteam.SportsProvider</string>
    <string name="sync_account_type" translatable="false">fillmyteam.android.sample.com</string>
    <string name="network_status_key" translatable="false">sync_status</string>
    <string name="match_id" translatable="false">match_id</string>
    <string name="learn_to_play" translatable="false">Learn to play <xliff:g id="sport">%1$s</xliff:g></string>
    <string name="lets_play" translatable="false">Let\'s play <xliff:g id="sport">%1$s</xliff:g></string>
    <string name="play_invitation" translatable="false">You are invited to play <xliff:g id="sport">%1$s</xliff:g> with me on <xliff:g id="time">%2$s</xliff:g></string>
    <string name="invite_player" translatable="false">Invite Player</string>
    <string name="objective" translatable="false">Objective</string>
    <string name="when" translatable="false">When</string>
    <string name="time" translatable="false">Time</string>
    <string name="invalid_date_chosen" translatable="false">Invalid Date is chosen</string>
    <string name="invalid_date_time_chosen" translatable="false">Invalid Date/Time</string>
    <string name="invalid_date_time_message" translatable="false">Date/Time chosen is incorrect. Please try again!</string>
    <string name="ok_button" translatable="false">OK</string>
    <string name="match_on" translatable="false">On: </string>
    <string name="match_with" translatable="false">With: </string>
    <string name="match_at" translatable="false">At: </string>
    <string name="play_sport" translatable="false">Playing  <xliff:g id="sport">%1$s</xliff:g>  </string>
    <string name="sports_detail" translatable="false">sport detail</string>
    <string name="sports_list_unavailable" translatable="false">No Sports Information Available</string>
    <string name="empty_sports_list_server_down" translatable="false">No sports information available. The server is not returning data.</string>
    <string name="empty_sports_list_server_error" translatable="false">No sports information available. The server is not returning valid data. Please check for an updated version of Fill My Team app.</string>
    <string name="invalid_information_error" translatable="false">No sports information available. The request is not recognized by the server. </string>
    <string name="network_unavailable" translatable="false">No sports information available. The network is not available to fetch sports data</string>
    <string name="login_network_unavailable" translatable="false">No network available to login</string>
    <string name="location_data_unavailable" translatable="false">No location information available. The network is not available to fetch location data</string>
    <string name="api_not_connected" translatable="false">Unable to connect to server. Please try again</string>
    <string name="location_error" translatable="false">There was some problem in processing this request. Please try again</string>
    <string name="timeout" translatable="false">The request has timed out. Please try again after some time.</string>
    <string name="no_location_found" translatable="false">Unable to indentify location. Please try again.</string>
    <string name="empty_store_list_server_down" translatable="false">No Sport store information available. The server is not returning data.</string>
    <string name="empty_store_list_server_error" translatable="false">No sports store information available. The server is not returning valid data. Please check for an updated version of Fill My Team app.</string>
    <string name="invalid_request_error" translatable="false">No sports store information available. The request is not recognized by the server. </string>
    <string name="watch_video" translatable="false">Watch video</string>
</resources>