<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/manage_notifications">

        <ListPreference
            android:defaultValue="@string/fifteen_mins_value"
            android:entries="@array/time_interval"
            android:entryValues="@array/time_interval_values"
            android:key="@string/notify_frequency_key"
            android:title="@string/frequency" />
    </PreferenceCategory>

    <!--PreferenceCategory android:title="@string/calendar_event">
        <CheckBoxPreference
            android:contentDescription="@string/cal_event_desc"
            android:defaultValue="@string/default_notify_choice"
            android:key="@string/cal_event_key"
            android:summaryOff="@string/choice_notify_off"
            android:summaryOn="@string/choice_notify_on"
            android:title="@string/cal_event_title" />
    </PreferenceCategory-->
</PreferenceScreen>