<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">


            <com.sample.android.fillmyteam.ui.AspectRatioImageViewer
                android:id="@+id/sport_poster"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar_layout"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:elevation="4dp"
                app:layout_collapseMode="pin">

            </android.support.v7.widget.Toolbar>

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="@dimen/side_margin"
        android:layout_marginStart="@dimen/side_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <android.support.v7.widget.GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:columnCount="2">

            <android.support.v7.widget.Space
                android:layout_marginBottom="@dimen/abc_list_item_padding_horizontal_material"
                app:layout_columnSpan="2"
                app:layout_columnWeight="1"
                app:layout_rowWeight="1" />


            <TextView
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/objective"
                app:layout_columnSpan="2" />


            <TextView
                android:id="@+id/objective_text"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-regular"
                app:layout_columnSpan="1"
                app:layout_columnWeight="1" />

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_columnSpan="1"
                app:layout_columnWeight="1">

                <ImageView
                    android:id="@+id/video_thumbnail_imageView"
                    android:layout_width="@dimen/image_thumbnail_size"
                    android:layout_height="@dimen/image_thumbnail_size"
                    android:layout_gravity="center"
                    android:contentDescription="@string/watch_video"
                    />

                <ImageView
                    android:id="@+id/playVideo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|center_vertical"
                    android:visibility="invisible"
                    android:src="@drawable/ic_video_play"
                    android:contentDescription="@string/watch_video"/>
            </FrameLayout>

            <android.support.v7.widget.Space
                android:layout_marginBottom="@dimen/abc_list_item_padding_horizontal_material"
                app:layout_columnSpan="2"
                app:layout_columnWeight="1"
                app:layout_rowWeight="1" />

            <TextView
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/players"
                app:layout_columnSpan="2"

                />

            <TextView
                android:id="@+id/players_text"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-regular"

                app:layout_columnSpan="2" />

            <android.support.v7.widget.Space

                android:layout_marginBottom="@dimen/abc_list_item_padding_horizontal_material"
                app:layout_columnSpan="2"
                app:layout_columnWeight="1"
                app:layout_rowWeight="1" />

            <TextView
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/basic_rules"
                app:layout_columnSpan="2"

                />

            <TextView
                android:id="@+id/rules_text"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-regular"
                app:layout_columnSpan="2"

                />


        </android.support.v7.widget.GridLayout>
    </android.support.v4.widget.NestedScrollView>


</android.support.design.widget.CoordinatorLayout>
